--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "0.72.6",
     "react-native-htmlview": "^0.17.0",
     "react-native-reanimated": "~3.3.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
